# Air-Quality-API

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.tf  pyproject.toml  serve.py  variables.tf
.github/workflows/: deploy.yml  main.yml
api/base_models/: models.py
api/logger/: init_logger.py
api/middleware/: bucket_middleware.py
api/utils/: manager.py  utils.py
mlruns/0/: meta.yaml
